--- a/src/components/Section/section.scss
+++ b/src/components/Section/section.scss
@@ -1,3 +1,7 @@
+.sections {
+  padding-top: 100px;
+}
+
 .section {
   display: flex;
   flex-direction: column;
@@ -6,7 +10,7 @@
   align-items: center;
 
   &__header {
-    padding: 2% 0 2%;
+    padding: 2% 0 3%;
     width: $desktop;
     max-width: $desktop;
 
@@ -16,13 +20,7 @@
 
     @media only screen and (max-width: $tablet) {
       width: 90%;
-      padding: 2% 5%;
-    }
-
-    h4 {
-      color: $light-blue-color;
-      font-family: $font-mono;
-      font-size: 0.83em;
+      padding: 2% 5% 3%;
     }
 
     h2 {
@@ -47,14 +45,32 @@
     }
   }
 
+  &__body {
+    padding: 0 0 3%;
+    width: $desktop;
+    max-width: $desktop;
+    display: flex;
+    flex-direction: column;
+
+    @media only screen and (max-width: $desktop) {
+      width: $tablet;
+    }
+
+    @media only screen and (max-width: $tablet) {
+      width: 90%;
+      padding: 0 5% 3%;
+    }
+
+    h4 {
+      color: white;
+      font-family: $font-mono;
+    }
+  }
+
   &--light {
     background: white;
 
     .section__header {
-      h4 {
-        color: $dark-gray-color;
-      }
-
       h2 {
         color: $mid-blue-color;
       }
@@ -63,23 +79,19 @@
         color: $light-blue-color;
       }
     }
+
+    .section__body {
+      h4 {
+        color: $mid-blue-color;
+      }
+    }
   }
 
-  &__body {
-    padding: 0 0 2%;
-    width: $desktop;
-    max-width: $desktop;
-
-    @media only screen and (max-width: $desktop) {
-      width: $tablet;
-    }
-
-    @media only screen and (max-width: $tablet) {
-      width: 90%;
-      padding: 0 5% 2%;
-    }
-
-    display: flex;
-    flex-direction: column;
+  &__panel {
+    overflow: hidden;
+    overflow-x: scroll;
+    margin-bottom: 1.6em;
   }
 }
+
+
