--- a/src/components/Section/section.scss
+++ b/src/components/Section/section.scss
@@ -87,6 +87,13 @@
     }
   }
 
+  &--error {
+    background: pink;
+    border: 1px solid red;
+    color: red;
+    padding: 20px;
+  }
+
   &__panel {
     overflow: hidden;
     overflow-x: scroll;
