support auto updated polypeptide

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import '../../components/NucleicAcidIndicators/nucleic-acid-indicators.scss';
 @import '../../components/NucleicAcidSequence/nucleic-acid-sequence.scss';
 @import '../../components/Section/section.scss';
+@import '../../components/Footer/footer.scss';
 
 // sections
 @import '../../sections/DNA/dna.scss';
